--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,6 @@
   "dependencies": {
     "bootstrap": "~4.0.0-alpha.6",
     "slick-carousel": "^1.8.0",
-    "components-font-awesome": "^4.7.0",
-    "three.js": "threejs#*"
+    "components-font-awesome": "^4.7.0"
   }
 }
